--- a/app.json
+++ b/app.json
@@ -1,34 +1,37 @@
 {
-    "name": "Music Dan Video Player UserBot",
-    "description": "Telegram UserBot Untuk Memutar Lagu Dan Video Di Obrolan Suara Telegram.",
-    "logo": "https://telegra.ph/file/e99fd5f4e72127ed67c65.jpg",
+    "name": "Source Freedom",
+    "description": "لتشغيل الاغاني في المجموعات والقنوات.",
+    "logo": "https://te.legra.ph/file/402c519808f75bd9b1803.jpg",
     "keywords": [
         "Telegram",
         "MusicPlayer",
         "VideoPlayer"
     ],
-    "repository": "https://github.com/XtomiSN/MusicAndVideoPlayer",
+    "repository": "https://github.com/SoRsRR8r9/strong",
     "env": {
         "SESSION": {
-            "description": "Pyrogram String Session",
+            "description": "اكتب هنا كود ترمكس",
             "required": true
         },
-        "API_ID": {
-            "description": "Masukan APP ID Silahkan Ambil dari my.telegram.org/apps",
-            "required": true
+          "API_ID": {
+            "description": "لاتغيرها ابدا",
+            "required": true,
+            "value": "19399491"
         },
         "HNDLR": {
-            "description": "ini akan digunakan sebagai prefix di semua perintah",
+            "description": "لاتغيرها ابدا",
             "required": false,
-            "value": "/"
+            "value": ""
         },
-        "API_HASH": {
-            "description": "Masukan API HASH Silahkan Ambil dari my.telegram.org/apps",
-            "required": true
+            "API_HASH": {
+            "description": "لاتغيرها ابدا",
+            "required": true,
+            "value": "eaa4f266934dfef23edb6d1f25e0b10f"
         },
-        "SUDO_USERS": {
-            "description": "Daftar User ID pengguna dihitung sebagai admin di semua tempat (pemisah menggunakan space)",
-            "required": true
+           "SUDO_USERS": {
+            "description": "اكتب ايدي المطور او اتركها كما هي",
+            "required": true,
+            "value": "1854384004"
         }
     },
     "addons": [],
